fix inconsistent spacing between components and add navbar spacer

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,18 +2,22 @@
 @tailwind components;
 @tailwind utilities;
 
-/* // $primary: #3ab8ea;
-// $light: #fff;
-// $dark: #23272a;
-// $grey: #ededed;
-// $secondary: #d97cd5; */
-
 html,
-main {
+body {
   width: 100%;
+  min-height: 100vh;
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
+  overflow-x: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+main {
+  overflow: hidden;
+  min-height: 100vh;
 }
 
 /* Position YouTube iframe */
